--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,7 +2,6 @@
   background: var(--background-panels);
   --ifm-navbar-link-color: var(--ifm-heading-color);
   --ifm-navbar-link-hover-color: var(--ifm-heading-color);
-  height: 48px;
   padding: 2px 16px;
   border-bottom: 1px solid var(--structure-border, #dcdee4);
 }
